# poke-dex-cli

./: .gitignore  README.md  main.py  pyproject.toml
clients/: pokedex_client.py
commands/: pokemon.py  pokemon_command.py
helpers/: pretty_helper.py
models/: pokemon.py  pokemon_type.py
modules/: pokemon_module.py
services/: pokemon_service.py
src/clients/: pokedex_client.py
src/clients/models/: pokemon_response.py
src/commands/: pokemon_command.py
src/models/: pokemon.py
src/services/: pokemon_service.py
src/traits/: json_trait.py
